kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: idm
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
